--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: Wiki Performance
+description: Repositório de documentação para a equipe de Performance da Caixa.
+baseurl: "/faqperformance" # the subpath of your site, e.g. /blog
+url: "https://rafaelvie.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+
 remote_theme: just-the-docs/just-the-docs
