--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ nav_sort: case_sensitive # Letras maiúsculas classificadas antes das minúscula
 back_to_top: true
 back_to_top_text: "Voltar ao topo"
 
-footer_content: "Copyright &copy; 2022 Equipe de Desempenho e Performance. Desenvolvido pela **GECEQ** para <a href=\"https://caixa.gov.br\">Caixa Econômica Federal.</a>"
+footer_content: "Copyright &copy; 2022 Equipe de Desempenho e Performance. Desenvolvido pela <strong>GECEQ</strong> para <a href=\"https://caixa.gov.br\">Caixa Econômica Federal.</a>"
 
 kramdown:
   syntax_highlighter_opts:
