Atualizações no arquivo de configuração do projeto

--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ collections:
         permalink: "/docs/_docs/jmeter"
         output: true
 
-just_the_docs:
+faqperformance:
     # Define which collections are used in just-the-docs
     collections:
         # Reference the "docs" collection
