--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ compress_html:
 collections:
     # Define a collection named "docs", its documents reside in the "_docs" directory
     docs:
-        permalink: "/docs/_docs/jmeter"
+        permalink: "/docs/_docs/"
         output: true
 
 faqperformance:
@@ -52,7 +52,7 @@ faqperformance:
         # Reference the "docs" collection
         docs:
             # Give the collection a name
-            name: JMeter
+            name: Documentação
             # Exclude the collection from the navigation
             # Supports true or false (default)
             nav_exclude: false
