--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ compress_html:
 collections:
     # Define a collection named "docs", its documents reside in the "_docs" directory
     docs:
-        permalink: "/docs/_docs/"
+        permalink: "/:collection/:path/"
         output: true
 
 faqperformance:
